--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ django-environ==0.12.0
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
+drf-nested-routers==0.94.2
 drf-yasg==1.21.10
 inflection==0.5.1
 kombu==5.5.4
 packaging==25.0
 prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
+pycodestyle==2.14.0
 pycparser==2.22
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
