--- a/.github/workflows/ProductionCI.yml
+++ b/.github/workflows/ProductionCI.yml
@@ -13,6 +13,12 @@ jobs:
     env:
       DJANGO_SETTINGS_MODULE: online_poll_system.settings
       PYTHONUNBUFFERED: 1
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
 
     steps:
       - name: 📥 Checkout repository
