--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,37 @@
+amqp==5.3.1
 asgiref==3.9.1
-attrs==21.2.0
-Automat==20.2.0
-Babel==2.8.0
-bcrypt==3.2.0
-blinker==1.4
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-constantly==15.1.0
-cryptography==3.4.8
-Django==5.2.5
-django-cors-headers==4.7.0
-httplib2==0.20.2
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
-Jinja2==3.0.3
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==3.2.0
-MarkupSafe==2.0.1
-more-itertools==8.10.0
-oauthlib==3.2.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pyparsing==2.4.7
-pyrsistent==0.18.1
-PyJWT==2.3.0
-pyOpenSSL==21.0.0
-pytz==2022.1
-PyYAML==5.4.1
-requests==2.25.1
-service-identity==18.1.0
-six==1.16.0
+billiard==4.2.1
+celery==5.5.3
+cffi==1.17.1
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+Django==5.2.4
+django-environ==0.12.0
+django-filter==25.1
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.1
+drf-nested-routers==0.94.2
+drf-yasg==1.21.10
+gunicorn==23.0.0
+inflection==0.5.1
+kombu==5.5.4
+packaging==25.0
+prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
+pycodestyle==2.14.0
+pycparser==2.22
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+rabbitmq==0.2.0
+six==1.17.0
 sqlparse==0.5.3
-Twisted==22.1.0
 typing_extensions==4.14.1
-urllib3==1.26.5
-zipp==1.0.0
-zope.interface==5.4.0
+tzdata==2025.2
+uritemplate==4.2.0
+vine==5.1.0
+wcwidth==0.2.13
+whitenoise==6.9.0
